update: pujat al 100% la teoria de les variables

--- a/Classes/Octubre/01_10_24/variables.ipynb
+++ b/Classes/Octubre/01_10_24/variables.ipynb
@@ -64,6 +64,89 @@
    "source": [
     "                                                            VARIABLES IMMUTABLES"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Enters (int):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "x = 10  # No modifica `5`; simplement crea un nou enter `10` i enllaça `x` a aquest.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cadena de caràcters (str):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_str = \"Hola\"\n",
+    "my_str = \"Adéu\"  # Crea una nova cadena de caràcters.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conjunts congelats (frozenset):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_frozenset = frozenset([1, 2, 3])\n",
+    "my_frozenset.add(4)  # Això donarà un error, ja que no es poden afegir elements.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Booleans (bool):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_valid = True\n",
+    "is_valid = False  # Crea un nou valor booleà.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "                                                                     Resum ràpid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Mutables: list, dict, set, classes amb propietats modificables.\n",
+    "- Immutables: int, float, str, tuple, frozenset, bool."
+   ]
   }
  ],
  "metadata": {
